Closed Bug 428841 Opened 16 years ago Closed 16 years ago

Crash [@ nsSVGPathElement::GetPathSegAtLength] due to signedness error

Categories

(Core :: SVG, defect)

x86
macOS
defect
Not set
critical

Tracking

()

RESOLVED FIXED

People

(Reporter: jruderman, Assigned: jruderman)

Details

(Keywords: crash, testcase)

Crash Data

Attachments

(2 files)

      No description provided.
Attached patch patchSplinter Review
Attachment #315408 - Flags: superreview?(roc)
Attachment #315408 - Flags: review?(roc)
Assignee: nobody → jruderman
Comment on attachment 315408 [details] [diff] [review]
patch

Good catch!
Attachment #315408 - Flags: superreview?(roc)
Attachment #315408 - Flags: superreview+
Attachment #315408 - Flags: review?(roc)
Attachment #315408 - Flags: review+
Comment on attachment 315408 [details] [diff] [review]
patch

Very simple crash fix.  Only changes the behavior in the case where Firefox currently crashes (numSegments == 0).
Attachment #315408 - Flags: approval1.9?
Comment on attachment 315408 [details] [diff] [review]
patch

a1.9+=damons
Attachment #315408 - Flags: approval1.9? → approval1.9+
Checked in with crashtest.
Status: NEW → RESOLVED
Closed: 16 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Crash Signature: [@ nsSVGPathElement::GetPathSegAtLength]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: