Fix bug 428841, Crash [@ nsSVGPathElement::GetPathSegAtLength] due to signedness error.  r+sr=roc, a=damon